change url of log status
